Duplicacion y correciones de la seccionde planes

--- a/styles.css
+++ b/styles.css
@@ -161,14 +161,14 @@ main {
 .currency-table--container .table__top-left {
     border-radius: 15px 0 0 0;
 }
-.currency-table--container .table__to-rigth {
+.currency-table--container .table__top-rigth {
     border-radius: 0 15px 0 0 ;
 }
 .currency-table--container .table__buttom-left {
     border-radius: 0 0 0 15px;
 }
-.currency-table--container .tables__buttom-rigth {
-    counter-reset: 0 0 15px 0;
+.currency-table--container .table__buttom-rigth {
+    border-radius: 0 0 15px 0;
 }
 .currency-table--container .table__right {
    font-size: 1.4rem;
@@ -227,6 +227,21 @@ main {
 }
 .currency-table--date p {
     font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--wara-black);
+}
+.currency-table--date2 {
+    width: 180px;
+    height: 28px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-blue);
+    border-radius: 8px;
+}
+.currency-table--date2 p {
+    font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 300;
     color: var(--wara-black);
@@ -409,24 +424,24 @@ main {
     width: 100%;
     min-width: 320px;
     height: 50vh;
-    background-image: url("./assets/img/bitcoinbaby2x.jpg");
+    background-image: url('./assets/img/bitcoinbaby2x.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-}
-.bitcoin-img-container h2 {
-    padding-top: 60px;
-    font-size: 2.4rem;
-    font-weight: bold;
-    line-height: 2.6rem;
-    color: var(--just-white);
     text-align: center;
 }
+.bitcoin-img-container h2 {
+   padding-top: 60px;
+   font-size: 2.4rem;
+   font-weight: bold;
+   line-height: 2.6rem;
+   color: var(--just-white); 
+}
 .main-plans-container {
-   width: 100%;
-   min-width: 320px;
-   padding-bottom: 70px;
-   text-align: center; 
+    width: 100%;
+    min-width: 320px;
+    padding-bottom: 70px;
+    text-align: center;
 }
 .plans--title {
     width: 90%;
@@ -448,30 +463,27 @@ main {
     font-weight: 500;
     line-height: 1.8rem;
     color: #757575;
+}    
+.plans-container--slider {
+    display: flex;
+    gap: 50px;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
 }
 .plans-container--card {
     position: relative;
+    scroll-snap-align: center;
     width: 70%;
-    min-height: 230px;
+    min-width: 190px;
     max-width: 300px;
     height: 250px;
-    margin: 50px auto 0;
+    margin: 50px 5px 0;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(89.73.40,0.16);
-}
-.recommeded {
-    position: absolute;
-    width: 120px;
-    height: 31px;
-    padding: 6px;
-    top: -15px;
-    left: calc(50% - 60px);
-    font-size: 1.2rem; 
-    background-color: var(--bitcoin-orange);
-    border-radius: 8px;
-    color: var(--just-white)
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
 }
 .plan-card--title {
     padding-top: 30px;
@@ -484,6 +496,7 @@ main {
     padding: 5px 0;
     font-size: 5.2rem;
     font-weight: bold;
+    line-height: 5.3rem;
     color: black;
 }
 .plan-card--price span {
@@ -493,4 +506,147 @@ main {
 .plan-card--saving {
     font-size: 1.2rem;
     color: #757575;
+}
+.plan-card--ca {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #faf8f7;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+.plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/icons/orange-right-arrow.svg');
+    vertical-align: text-bottom;
+
+}
+.plans-container--card {
+    position: relative;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 190px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px 5px 0;
+    padding: 0 15px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+.recommended {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    top: -15px;
+    left: calc(50% - 60px);
+    font-size: 1.2rem;
+    padding: 6px;
+    background-color: var(--bitcoin-orange);
+    border-radius: 8px;
+    color: var(--just-white);
+}
+.plan-card--title {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: black;
+}
+.plan-card--price {
+    padding: 5px 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: black;
+}
+.plan-card--price span {
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+.plan-card--saving {
+    font-size: 1.2rem;
+    color: #757575;
+}
+.plan-card--ca {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #faf8f7;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+.plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/icons/orange-right-arrow.svg');
+    vertical-align: text-bottom;
+}
+.plans-container--card {
+    position: relative;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 190px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px 5px 0;
+    padding: 0 15px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+.plan-card--title {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: black;
+}
+.plan-card--price {
+    padding: 5px 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: black;
+}
+.plan-card--price span {
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+.plan-card--saving {
+    font-size: 1.2rem;
+    color: #757575;
+}
+.plan-card--ca {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #faf8f7;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+.plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/icons/orange-right-arrow.svg');
+    vertical-align: text-bottom;
 }
